tests/typing/bad/testfile-variance-6.scala

class A[+T](x: T) { var f: T = x }
object Main { def main(args: Array[String]) { } }
